# nug-dongle

./: Dockerfile  README.md  config.toml  pyproject.toml  setup.py
nug_dongle/: __main__.py  frames.py  server.py
nug_dongle/core/: container.py  context.py  server.py
nug_dongle/core/frames/: base.py
nug_dongle/services/: pointer.py  video.py
