[tool.poetry]
name = "nug-dongle"
version = "0.1.0"
description = "Dongle service in the Nug Project"
authors = ["Jakub Dubec <jakub.dubec@gmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.19.2"
zeroconf = "^0.38.1"
hid = "^1.0.5"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
